# disease-prediction

./: pyproject.toml
models/lora-adapter/checkpoint-1250/: rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
models/lora-adapter/checkpoint-1875/: adapter_config.json  rng_state.pth  scaler.pt  scheduler.pt  trainer_state.json
models/lora-adapter/checkpoint-625/: rng_state.pth  scheduler.pt  trainer_state.json
src/disease_prediction_app/: data_generation.py  kaggle-lora-train-notebook.ipynb  prepare_finetune_data.py  train_lora.py
synthetic_data/: finetune_dataset.json  synthetic_pathological_data.csv
