[project]
name = "disease-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "faker>=40.13.0",
    "fastapi>=0.135.3",
    "pandas>=3.0.2",
    "peft>=0.19.0",
    "requests>=2.33.1",
    "sentencepiece>=0.2.1",
    "streamlit>=1.56.0",
    "transformers>=5.5.4",
    "uvicorn>=0.44.0",
]
